--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,10 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+
+
+$orangy: #F5564E;
+$blou: #173B85;
+$yelo: #FAB95B;
+$cream: #E8E2DB;
