--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,7 @@
-.navbar-lewagon {
+.navbar {
   justify-content: space-between;
-  background: white;
-}
-
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+  background: rgb(255, 243, 235);
+  box-shadow: 2px 1px 5px 1px rgba(0, 0, 0, .2);
+  margin-bottom: 5px;
+  padding: 10px;
 }
