--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -5,7 +5,7 @@
     <div id="map" style="width: 100%; height: 400px;"
       data-controller="map"
       data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-      data-map-markers-value="<%= @markers.to_json %>">
+      data-map-polylines-value="<%= @polylines.to_json %>">
     </div>
 
 </div>
