--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -4,8 +4,7 @@
 
     <div id="map" style="width: 100%; height: 400px;"
       data-controller="map"
-      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-      data-map-polylines-value="<%= @polylines.to_json %>">
+      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
 
 </div>
