--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,6 +1,6 @@
-<h1> Créer un nouveau jeu</h1>
+<h1>Créer un nouveau jeu</h1>
 
-  <%= form_with model: @game local: true do |form| %>
+<%= form_with model: @game, local: true do |form| %>
   <% if @game.errors.any? %>
     <div class="alert alert-danger">
       <h2>Il y a des erreurs dans le formulaire :</h2>
@@ -23,18 +23,14 @@
   </div>
 
   <div class="field">
-    <%= form.label :start_date, "Date de début" %>
-    <%= form.date_field :start_date, required: true %>
-  </div>
-
-  <div class="field">
-    <%= form.label :end_date, "Date de fin" %>
-    <%= form.date_field :end_date, required: true %>
+    <%= form.label :duration, "Durée du jeu (en jours)" %>
+    <%= form.number_field :duration, min: 1, placeholder: "Entrez la durée du jeu", required: true %>
   </div>
 
   <div class="actions">
     <%= form.submit "Créer le jeu", class: "btn btn-primary" %>
   </div>
 <% end %>
+
 
 <%= link_to "Retour à la liste des jeux", games_path, class: "btn btn-secondary" %>
