--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,6 +12,7 @@ $light-gray: #F4F4F4;
 
 
 $orangy: #F5564E;
-$blou: #173B85;
+$blou: #002D80;
+$blouclaire: #5C96E0;
 $yelo: #FAB95B;
-$cream: #E8E2DB;
+$cream: #FFFDF9;
