--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   justify-content: space-between;
-  background: rgb(255, 243, 235);
+  background: white;
   box-shadow: 2px 1px 5px 1px rgba(0, 0, 0, .2);
   margin-bottom: 5px;
   padding: 10px;
