--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
     <%= javascript_importmap_tags %>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
   </head>
-
-  <body><%= render "shared/navbar" %>
+<%= render "shared/navbar" %>
+  <body>
   <%= render "shared/flashes" %>
 
 
