--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,14 +28,14 @@
     <h2 class="namecard">Battle day</h2>
   </div>
   <div class="map">
-    <img src="/images/mapparis.png" alt="Paris Map">
+    <img src="/images/notstartedmap.png" alt="Paris Map">
   </div>
   <div class="details">
     <div class="infox">
-      <span>👥 7 Players</span>
-      <span>⏳ 3 days left</span>
+      <span>👥 3/7 Players</span>
+      <span>⏳ 70 days </span>
       <span>📍 Paris</span>
-      <span>🗺️30% covered</span>
+      <span>🗺️ 0% covered</span>
     </div>
 
 
@@ -59,20 +59,20 @@
       <div class="rank first">
         <span>1</span>
         <span>Iman</span>
-        <span>5 runs</span>
-        <span>22%</span>
+        <span>0 runs</span>
+        <span>0%</span>
       </div>
       <div class="rank">
         <span>2</span>
         <span>Antoine</span>
-        <span>5 runs</span>
-        <span>22%</span>
+        <span>0 runs</span>
+        <span>0%</span>
       </div>
       <div class="rank">
         <span>3</span>
         <span>Joe</span>
-        <span>5 runs</span>
-        <span>22%</span>
+        <span>0 runs</span>
+        <span>0%</span>
       </div>
     </div>
   </div>
@@ -80,4 +80,3 @@
         <button class="join-game-card">Join Game</button>
       </div>
 </div>
-
