--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container py-5">
 
   <!-- Navbar -->
-  <nav class="navbar navbar-light bg-light shadow-sm fixed-top">
+  <%# <nav class="navbar navbar-light bg-light shadow-sm fixed-top">
     <div class="container-fluid">
       <button class="btn btn-outline-secondary" type="button">
         <i class="fa-solid fa-gear"></i>
@@ -13,7 +13,7 @@
         <i class="fa-regular fa-bell"></i>
       </button>
     </div>
-  </nav>
+  </nav> %>
 
   <!-- Profile Section -->
   <div class="text-center mt-3 pt-4">
