--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,6 +6,7 @@
   background-color: white; /* Example footer background color */
   padding: 10px 0;
   position: sticky;
+  margin-top: 10px;
   bottom: 0;
   width: 100%;
   box-shadow: 2px -1px 5px 1px rgba(0, 0, 0, .2);
@@ -17,6 +18,7 @@
   flex-direction: column;
   align-items: center; /* Center items within each section */
   text-align: center;
+  font-size: 10px;
 }
 
 .footer-item img {
