--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
         </div>
         <div class="nav-logo">
             <%= link_to "#", class: "navbar-logo" do %>
-             <%= image_tag "logo_rn.svg", alt: "logo Icon", size: "30x30" %>
+             <%= image_tag "logo_rn.svg", alt: "logo Icon", size: "40x40", class:"rounded-3" %>
             <% end %>
         </div>
         <div class="notif-icon">
