--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,10 +8,10 @@
     </div>
 
     <div class="footer-item">
-        <%= link_to new_game_path, class: "nav-link" do %>
+        <%= link_to mine_games_path, class: "nav-link" do %>
           <%= image_tag("your_runs.svg", alt: "Notif Icon", size: "30x30") %>
           <br>
-          <span>YOUR GAMES</span>
+          <span>My games</span>
        <% end %>
     </div>
 
