--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
 <nav class="navbar">
         <div class="user-icon">
             <%= link_to new_player_session_path, class: "nav-link" do %>
-             <%= image_tag("icon_user.svg", alt: "User Icon", size: "30x30") %>
+             <%= image_tag("profile.svg", alt: "User Icon", size: "30x30") %>
            <% end %>
         </div>
         <div class="nav-logo">
@@ -12,7 +12,7 @@
         </div>
         <div class="notif-icon">
             <%= link_to new_player_session_path, class: "nav-link" do %>
-             <%= image_tag("notif_icon.svg", alt: "Notif Icon", size: "30x30") %>
+             <%= image_tag("notif.svg", alt: "Notif Icon", size: "30x30") %>
            <% end %>
         </div>
     </nav>
