--- a/app/assets/stylesheets/pages/_mine.scss
+++ b/app/assets/stylesheets/pages/_mine.scss
@@ -56,3 +56,63 @@
   min-height: 100vh;
   display: block;
 }
+
+.card {
+  width: 375px;
+  height: 480px;
+  background-color: white;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  margin: auto;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.card h2 {
+  font-size: 30px;
+  font-weight: 900;
+  margin: 0;
+  color: #4a90e2;
+  padding: 12px 12px;
+}
+
+.info {
+  margin-bottom: 1px;
+}
+
+.infos {
+  font-weight: bold;
+}
+.card .info {
+  display: flex;
+  justify-content: space-between;
+  height: 25px;
+  padding: 0 12px;
+}
+
+.map1 {
+  overflow: hidden;
+  margin: 12px 0;
+}
+
+
+.status {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+  text-align: center;
+  margin: 12px 12px;
+}
+
+.status div {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.status img {
+  width: 16px;
+}
+
