--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,7 +12,7 @@ $light-gray: #F4F4F4;
 
 
 $orangy: #F5564E;
-$blou: #002D80;
+$blou: rgb(0, 45, 128);
 $blouclaire: #5C96E0;
 $yelo: #FAB95B;
 $cream: #FFFDF9;
