--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -6,7 +6,7 @@
     <h2><%= game.name %></h2>
     <div class="info">
       <p>Created by <%= game.players.first.nickname %> </p>
-      <p>📍 Paris</p>
+      <p>📍 PARIS</p>
     </div>
     <div class="mapy">
   <div id="map" style="width: 100%; height: 300px;"
@@ -15,9 +15,9 @@
   </div>
 </div>
     <div class="status">
-      <div class="infos">👤 7/9</div>
-      <div class="infos">⌛ 3 days left</div>
-      <div class="infos">🗺️ 30% covered</div>
+      <div class="infos">👤 <%= game.nb_of_players  %>/9</div>
+      <div class="infos">⌛  <%= game.duration  %> DAYS </div>
+      <div class="infos">🗺️ 15 KM2 </div>
     </div>
 </div>
 <% end %>
