--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -5,7 +5,7 @@
 <div class="card">
     <h2><%= game.name %></h2>
     <div class="info">
-      <p>Created by <%= game.players.first.nickname %> </p>
+      <p>Created by <strong><%= game.players.first.nickname %></strong> </p>
       <p>📍 PARIS</p>
     </div>
     <div class="mapy">
