--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -69,3 +69,65 @@
         <button class="join-game-card">Join Game</button>
       </div>
 </div>
+
+
+<div class="battle-container">
+  <div class="header">
+    <h2 class="namecard">Battle day</h2>
+  </div>
+  <div class="map1">
+  <div id="map" style="width: 100%; height: 400px;"
+       data-controller="map"
+       data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
+</div>
+  <div class="details">
+    <div class="infox">
+      <span>👥 3/7 Players</span>
+      <span>⏳ 70 days </span>
+      <span>📍 Paris</span>
+      <span>🗺️ 0% covered</span>
+    </div>
+
+
+  </div>
+  <div class="leaderboard">
+    <div class="player-icons">
+      <div class="player">
+        <img src="images/avatar1.svg" alt="ava" class="playerimgsecond">
+        <span>Antoine</span>
+      </div>
+      <div class="player first">
+        <img src="images/avatar1.svg" alt="ava" class="playerimgfirst">
+        <span>Iman</span>
+      </div>
+      <div class="player" >
+        <img src="images/avatar1.svg" alt="ava" class="playerimgthird">
+        <span>John</span>
+      </div>
+    </div>
+    <div class="rankings">
+      <div class="rank first">
+        <span>1</span>
+        <span>Iman</span>
+        <span>0 runs</span>
+        <span>0%</span>
+      </div>
+      <div class="rank player">
+        <span>2</span>
+        <span>Antoine</span>
+        <span>0 runs</span>
+        <span>0%</span>
+      </div>
+      <div class="rank">
+        <span>3</span>
+        <span>Joe</span>
+        <span>0 runs</span>
+        <span>0%</span>
+      </div>
+    </div>
+  </div>
+      <div  class="btncard">
+        <button class="join-game-card">Join Game</button>
+      </div>
+</div>
