--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -16,3 +16,10 @@ $blou: rgb(0, 45, 128);
 $blouclaire: #5C96E0;
 $yelo: #FAB95B;
 $cream: #FFFDF9;
+
+
+$player1: #FFE74C;
+$player2: #FF5964;
+$palyer3: #38618C;
+$player4: #35A7FF;
+
