--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,6 +8,7 @@
 
 <button class="btn-join">JOIN GAME</button>
 
+ <%# SHOW GAME PENDING %>
 
 <div class="battle-container">
   <div class="header">
@@ -21,10 +22,25 @@
 </div>
   <div class="details">
     <div class="infox">
-      <span>👥 3/7 Players</span>
-      <span>⏳ 70 days </span>
-      <span>📍 Paris</span>
-      <span>🗺️ 0% covered</span>
+        <div class="truc">
+          <p class="nami">Number of players</p>
+          <p class="namip">3/7 </p>
+      </div>
+
+        <div class="truc">
+          <p class="nami">Map size</p>
+          <p class="namip">15 km2s</p>
+      </div>
+
+      <div class="truc">
+        <p class="nami">Duration</p>
+          <p class="namip">25 days</p>
+      </div>
+
+      <div class="truc">
+          <p class="nami">Bro?</p>
+          <p class="namip">Hi bro</p>
+      </div>
     </div>
 
 
@@ -63,67 +79,8 @@
         <span>0 runs</span>
         <span>0%</span>
       </div>
-    </div>
-  </div>
-      <div  class="btncard">
-        <button class="join-game-card">Join Game</button>
-      </div>
-</div>
+      <div class="rankempty">
 
-
-<div class="battle-container">
-  <div class="header">
-    <h2 class="namecard">Battle day</h2>
-  </div>
-  <div class="map1">
-  <div id="map" style="width: 100%; height: 400px;"
-       data-controller="map"
-       data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
-</div>
-  <div class="details">
-    <div class="infox">
-      <span>👥 3/7 Players</span>
-      <span>⏳ 70 days </span>
-      <span>📍 Paris</span>
-      <span>🗺️ 0% covered</span>
-    </div>
-
-
-  </div>
-  <div class="leaderboard">
-    <div class="player-icons">
-      <div class="player">
-        <img src="images/avatar1.svg" alt="ava" class="playerimgsecond">
-        <span>Antoine</span>
-      </div>
-      <div class="player first">
-        <img src="images/avatar1.svg" alt="ava" class="playerimgfirst">
-        <span>Iman</span>
-      </div>
-      <div class="player" >
-        <img src="images/avatar1.svg" alt="ava" class="playerimgthird">
-        <span>John</span>
-      </div>
-    </div>
-    <div class="rankings">
-      <div class="rank first">
-        <span>1</span>
-        <span>Iman</span>
-        <span>0 runs</span>
-        <span>0%</span>
-      </div>
-      <div class="rank player">
-        <span>2</span>
-        <span>Antoine</span>
-        <span>0 runs</span>
-        <span>0%</span>
-      </div>
-      <div class="rank">
-        <span>3</span>
-        <span>Joe</span>
-        <span>0 runs</span>
-        <span>0%</span>
       </div>
     </div>
   </div>
