--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -9,11 +9,11 @@
       <p>📍 PARIS</p>
     </div>
     <div class="mapy">
-  <div id="map" style="width: 100%; height: 300px;"
-       data-controller="map"
-       data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
-</div>
+      <div id="map" style="width: 100%; height: 300px;"
+          data-controller="map-demo"
+          data-map-demo-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
+    </div>
     <div class="status">
       <div class="infos">👤 <%= game.nb_of_players  %>/9</div>
       <div class="infos">⌛  <%= game.duration  %> DAYS </div>
