--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
             <% end %>
         </div>
         <div class="notif-icon">
-            <%= link_to new_player_session_path, class: "nav-link" do %>
+            <%= link_to notifications_path,  class: "nav-link" do %>
              <%= image_tag("notif.svg", alt: "Notif Icon", size: "30x30") %>
            <% end %>
         </div>
