--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -14,7 +14,7 @@ $light-gray: #F4F4F4;
 $orangy: #F5564E;
 $blou: rgb(0, 45, 128);
 $blouclaire: #5C96E0;
-$yelo: #FAB95B;
+$yelo: #f8e36d;
 $cream: #FFFDF9;
 
 
@@ -22,4 +22,3 @@ $player1: #FFE74C;
 $player2: #FF5964;
 $palyer3: #38618C;
 $player4: #35A7FF;
-
