--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,6 +4,7 @@
   box-shadow: 2px 1px 5px 1px rgba(0, 0, 0, .2);
   margin-bottom: 15px;
   padding: 10px;
+  position: sticky;
 }
 
 .nav-logo {
@@ -25,4 +26,3 @@
     margin-left: 10px; /* Espace pour séparer les icônes */
   }
 }
-
