--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,23 +1,1 @@
-
-
-
-  <% @games.each do |game| %>
-<div class="card">
-    <h2><%= game.name %></h2>
-    <div class="info">
-      <p>Created by <strong><%= game.players.first.nickname %></strong> </p>
-      <p>📍 PARIS</p>
-    </div>
-    <div class="mapy">
-  <div id="map" style="width: 100%; height: 300px;"
-       data-controller="map"
-       data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
-</div>
-    <div class="status">
-      <div class="infos">👤 <%= game.nb_of_players  %>/9</div>
-      <div class="infos">⌛  <%= game.duration  %> DAYS </div>
-      <div class="infos">🗺️ 15 KM2 </div>
-    </div>
-</div>
-<% end %>
+index home
