--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -18,7 +18,7 @@ $yelo: #f8e36d;
 $cream: #FFFDF9;
 
 
-$player1: #FFE74C;
+$player1: #a2922d;
 $player2: #FF5964;
 $palyer3: #38618C;
 $player4: #35A7FF;
