--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,7 @@
-home
+<div class="loading-container" data-controller="page" data-page-redirect-url-value="<%= player_signed_in? ? games_path : new_player_session_path %>">
+  <div class="rotating-logos">
+    <img src="<%= asset_path('logo1.png') %>" alt="Logo Step 1" class="logo-step logo-step-1">
+    <img src="<%= asset_path('logo2.png') %>" alt="Logo Step 2" class="logo-step logo-step-2">
+    <img src="<%= asset_path('logo3.png') %>" alt="Logo Step 3" class="logo-step logo-step-3">
+  </div>
+  
