--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,18 +8,18 @@
       <% end %>
     </div>
     <div class="footer-item">
-        <%= link_to games_path, class: "nav-link" do %>
+        <%= link_to mine_games_path, class: "nav-link" do %>
             <%= image_tag("home.svg", alt: "Notif Icon", size: "30x30") %>
             <br>
-           <span>HOME</span>
+           <span>MY GAMES</span>
        <% end %>
     </div>
 
     <div class="footer-item">
-        <%= link_to mine_games_path, class: "nav-link" do %>
+        <%= link_to games_path, class: "nav-link" do %>
           <%= image_tag("your_runs.svg", alt: "Notif Icon", size: "30x30") %>
           <br>
-          <span>MY GAMES</span>
+          <span>JOIN GAMES</span>
        <% end %>
     </div>
 
