--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div class="status">
-    <div class="infos">👤 <%= game.nb_of_players %> / 9</div>
+    <div class="infos">👤 <%= game.players.count %> / <%= game.nb_of_players %>   </div>
     <div class="infos">⏳ <%= game.duration %> DAYS</div>
     <div class="infos">🌍 15 KM²</div>
   </div>
