--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,8 +6,8 @@
   </div>
   <div class="map1">
   <div id="map" style="width: 100%; height: 400px;"
-       data-controller="map"
-       data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+       data-controller="map-demo"
+       data-map-demo-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
 </div>
   <div class="details">
@@ -61,8 +61,9 @@
       </div>
     </div>
   </div>
-
+  <<% if !@game.players.include?(current_player)  %>
          <%= button_to "JOIN THIS GAME", game_game_players_path(@game), method: :post, class: "join-game-card" %>
+<% end %>
 
 </div>
 
@@ -140,7 +141,7 @@
         <span>Joe</span>
         <span>0 runs</span>
         <span>0%</span>
-      
+
     </div>
   </div>
 
