--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,37 @@
-<h2>Sign up</h2>
+<h2 class="text-center mb-4">Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-container mx-auto", style: "max-width: 400px;" }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-group">
     <%= f.input :email,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                input_html: { class: "form-control", placeholder: "Email", autocomplete: "email" },
+                label_html: { class: "form-label" } %>
+  </div>
+
+  <div class="form-group">
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { class: "form-control", placeholder: "Password", autocomplete: "new-password" },
+                label_html: { class: "form-label" } %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+  <div class="form-group">
+    <%= f.input :password_confirmation,
+                required: true,
+                input_html: { class: "form-control", placeholder: "Confirm Password", autocomplete: "new-password" },
+                label_html: { class: "form-label" } %>
+  </div>
+
+  <div class="d-grid mb-3">
+    <%= f.button :submit, "Sign up", class: "btn btn-primary btn-block" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="text-center mt-3">
+  <%= link_to "Already have an account? Log in", new_session_path(resource_name), class: "btn btn-link btn-sm d-inline-block" %>
+  <%= link_to "Forgot your password?", new_password_path(resource_name), class: "btn btn-link btn-sm d-inline-block" %>
+</div>
