layers on bientot fini

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -11,8 +11,8 @@
 
   <div class="mapy">
     <div id="map" style="width: 100%; height: 300px;"
-         data-controller="map-demo"
-         data-map-demo-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+         data-controller="mappending"
+         data-mappending-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
   </div>
 
