--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,8 +6,8 @@
   </div>
   <div class="map1">
   <div id="map" style="width: 100%; height: 400px;"
-       data-controller="map-demo"
-       data-map-demo-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+       data-controller="mappending"
+       data-mappending-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
 </div>
   <div class="details">
@@ -78,10 +78,12 @@
     <h2 class="namecard"> <%= @game.name %></h2>
   </div>
   <div class="map1">
-  <div id="map" style="width: 100%; height: 400px;"
-       data-controller="map"
-       data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
+    <div id="map-<%= @game.id %>"
+        style="width: 100%; height: 400px;"
+        data-controller="mapongoing"
+        data-mapongoing-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+        data-mapongoing-layers-value="<%= @layers.to_json  %>">
+    </div>
 </div>
   <div class="details">
     <div class="infox">
@@ -157,10 +159,12 @@
     <h2 class="namecard"> <%= @game.name %></h2>
   </div>
   <div class="map1">
-  <div id="map" style="width: 100%; height: 400px;"
-       data-controller="map"
-       data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
+    <div id="map-<%= @game.id %>"
+        style="width: 100%; height: 400px;"
+        data-controller="mapongoing"
+        data-mapongoing-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+        data-mapongoing-layers-value="<%= @layers.to_json %>">
+    </div>
 </div>
   <div class="details">
     <div class="infox">
