add layers to show ongoing

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -22,3 +22,9 @@ $player1: #a2922d;
 $player2: #FF5964;
 $palyer3: #38618C;
 $player4: #35A7FF;
+$palyer5: #ad72b3;
+$player6: #61fab8;
+$palyer7: #f29451;
+$player8: #1c3d56;
+$palyer9: #51cff2;
+$player10: #561c23;
