--- a/app/views/games/mine.html.erb
+++ b/app/views/games/mine.html.erb
@@ -23,12 +23,14 @@
             <p>📍Paris</p>
           </div>
 
+
           <div class="mapy">
-            <div id="map" style="width: 100%; height: 300px;"
-                 data-controller="map"
-                 data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-                 data-map-latitude-value="<%= game.latitude %>"
-                 data-map-longitude-value="<%= game.longitude %>">
+            <div id="map-<%= game.id %>"style="width: 100%; height: 300px;"
+                 data-controller="mapongoing"
+                 data-mapongoing-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+                 data-mapongoing-latitude-value="<%= game.latitude %>"
+                 data-mapongoing-longitude-value="<%= game.longitude %>"
+                 data-mapongoing-layers-value="<%= game.instance_variable_get(:@layers).to_json %>">
             </div>
           </div>
 
@@ -63,10 +65,10 @@
 
           <div class="mapy">
             <div id="map" style="width: 100%; height: 300px;"
-                 data-controller="map"
-                 data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-                 data-map-latitude-value="<%= game.latitude %>"
-                 data-map-longitude-value="<%= game.longitude %>">
+                 data-controller="mappending"
+                 data-mappending-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+                 data-mappending-latitude-value="<%= game.latitude %>"
+                 data-mappending-longitude-value="<%= game.longitude %>">
             </div>
           </div>
 
@@ -100,11 +102,12 @@
           </div>
 
           <div class="mapy">
-            <div id="map" style="width: 100%; height: 300px;"
-                 data-controller="map"
-                 data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-                 data-map-latitude-value="<%= game.latitude %>"
-                 data-map-longitude-value="<%= game.longitude %>">
+            <div id="map-<%= game.id %>"style="width: 100%; height: 300px;"
+                 data-controller="mapongoing"
+                 data-mapongoing-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+                 data-mapongoing-latitude-value="<%= game.latitude %>"
+                 data-mapongoing-longitude-value="<%= game.longitude %>"
+                 data-mapongoing-layers-value="<%= game.instance_variable_get(:@layers).to_json %>">
             </div>
           </div>
 
