--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -19,10 +19,14 @@
   <div class="text-center mt-3 pt-4">
     <div class="position-relative d-inline-block">
       <div class="rounded-circle bg-primary" style="width: 89px; height: 89px;">
-        <i class="fa-solid fa-user text-white fs-1 d-flex justify-content-center align-items-center" style="height: 100%;"></i>
+        <i class="fa-solid fa-user text-white fs-1 d-flex justify-content-center align-items-center" action="/upload"  style="height: 100%;"></i>
+        <form action="/upload" method="POST" enctype="multipart/form-data">
+          <input type="file" name="photo" id="photoUpload">
+        </form>
       </div>
-      <button class="btn btn-light position-absolute top-0 start-100 translate-middle p-0 rounded-circle border" style="width: 25px; height: 25px;">
+      <button class="btn btn-light position-absolute top-0 start-100 translate-middle p-0 rounded-circle border" id="profileButton" style="width: 25px; height: 25px;">
         <i class="fa-regular fa-pen-to-square"></i>
+        <input type="file" class="form-control-file" id="photoUpload" accept="image/*" style="opacity: 0; position: absolute; top: 0; left: 0; width: 25px; height: 25px; cursor: pointer;">
       </button>
     </div>
     <h1 class="mt-3 fs-2 fw-bold">
